--- a/script/helpers.yaml
+++ b/script/helpers.yaml
@@ -66,7 +66,7 @@ remote_action:
       example: "light.turn_on"
     entity_id:
       description: "The target of the action"
-      example: "light.kitchen_main_light"
+      example: "light.kitchen"
     message:
       description: "The content of the notification"
       example: "turning on the kitchen light"
