--- a/automation/light.yaml
+++ b/automation/light.yaml
@@ -30,22 +30,26 @@
 
 - alias: turn off entrance light when exiting
   id: turn_off_entrance_light_when_exiting
+  variables:
+    lock_device_id: "{{ device_id('lock.front_door_lock') }}"
   triggers:
     - trigger: event
       event_type: zwave_js_notification
       event_data:
-        device_id: "e8eb5d524639cae23921eacd145bde9f"
+        device_id: "{{ lock_device_id }}"
         event_label: "Keypad lock operation"
   actions:
     - action: light.turn_off
       entity_id: switch.entryway
 
 - alias: turn on entrance light when entering
+  variables:
+    lock_device_id: "{{ device_id('lock.front_door_lock') }}"
   triggers:
     - trigger: event
       event_type: zwave_js_notification
       event_data:
-        device_id: "e8eb5d524639cae23921eacd145bde9f"
+        device_id: "{{ lock_device_id }}"
         event_label: "Keypad unlock operation"
   conditions:
     or:
