--- a/automation/light.yaml
+++ b/automation/light.yaml
@@ -30,29 +30,28 @@
 
 - alias: turn off entrance light when exiting
   id: turn_off_entrance_light_when_exiting
-  variables:
-    lock_device_id: "{{ device_id('lock.front_door_lock') }}"
   triggers:
     - trigger: event
       event_type: zwave_js_notification
       event_data:
-        device_id: "{{ lock_device_id }}"
         event_label: "Keypad lock operation"
+  conditions:
+    - condition: template
+      value_template: "{{ trigger.event.data.device_id == device_id('lock.front_door_lock') }}"
   actions:
     - action: light.turn_off
       entity_id: switch.entryway
 
 - alias: turn on entrance light when entering
-  variables:
-    lock_device_id: "{{ device_id('lock.front_door_lock') }}"
   triggers:
     - trigger: event
       event_type: zwave_js_notification
       event_data:
-        device_id: "{{ lock_device_id }}"
         event_label: "Keypad unlock operation"
   conditions:
-    or:
+    - condition: template
+      value_template: "{{ trigger.event.data.device_id == device_id('lock.front_door_lock') }}"
+    - or:
       - condition: sun
         after: sunset
         after_offset: "-01:00:00"
