--- a/automation/light.yaml
+++ b/automation/light.yaml
@@ -39,7 +39,7 @@
     - condition: template
       value_template: "{{ trigger.event.data.device_id == device_id('lock.front_door_lock') }}"
   actions:
-    - action: light.turn_off
+    - action: switch.turn_off
       entity_id: switch.entryway
 
 - alias: turn on entrance light when entering
@@ -52,12 +52,12 @@
     - condition: template
       value_template: "{{ trigger.event.data.device_id == device_id('lock.front_door_lock') }}"
     - or:
-      - condition: sun
-        after: sunset
-        after_offset: "-01:00:00"
-      - condition: sun
-        before: sunrise
-        before_offset: "01:00:00"
+        - condition: sun
+          after: sunset
+          after_offset: "-01:00:00"
+        - condition: sun
+          before: sunrise
+          before_offset: "01:00:00"
   actions:
     - action: script.auto_switch_on
       data:
