--- a/template/camera.yaml
+++ b/template/camera.yaml
@@ -3,12 +3,9 @@
     - name: Garage motion detection
       state: "{{ is_state('binary_sensor.garage_motion', 'on') }}"
       delay_off: "00:05:00"
-    - name: Parking perimeter detection
-      state: "{{ is_state('binary_sensor.parking_fence_guard', 'on') }}"
-      delay_off: "00:00:10"
-    - name: Parking perimeter detection night
-      state: "{{ is_state('binary_sensor.parking_fence_guard_night', 'on') }}"
-      delay_off: "00:00:10"
     - name: Parking motion detection
-      state: "{{ is_state('binary_sensor.parking_motion_guard', 'on') }}"
-      delay_off: "00:00:10"
+      state: "{{ is_state('binary_sensor.parking_motion', 'on') }}"
+      delay_off: "00:05:00"
+    - name: Backyard motion detection
+      state: "{{ is_state('binary_sensor.backyard_motion', 'on') }}"
+      delay_off: "00:05:00"
