--- a/script/routines.yaml
+++ b/script/routines.yaml
@@ -76,3 +76,22 @@ white_noise_stop:
     - action: media_player.turn_off
       data:
         entity_id: "{{ media_player_id }}"
+
+frederique_sleep:
+  sequence:
+    - action: light.turn_off
+      data:
+        entity_id: light.frederique_bedroom
+    - action: switch.turn_on
+      data:
+        entity_id: switch.baby_monitor
+    - action: script.turn_on
+      data:
+        entity_id: script.white_noise_stop
+        variables:
+          media_player_id: media_player.bureau
+    - action: script.turn_on
+      data:
+        entity_id: script.white_noise_start
+        variables:
+          media_player_id: media_player.bureau
