update custom denon avr to latest real integration

--- a/custom_components/custom_denonavr_hdr/manifest.json
+++ b/custom_components/custom_denonavr_hdr/manifest.json
@@ -1,12 +1,12 @@
 {
   "domain": "denonavr_hdr",
-  "name": "Denon AVR Network Receivers with hdr events",
+  "name": "Denon AVR Network Receivers with hdr event",
   "codeowners": ["@ol-iver", "@starkillerOG"],
   "config_flow": true,
   "documentation": "https://www.home-assistant.io/integrations/denonavr",
   "iot_class": "local_push",
   "loggers": ["denonavr"],
-  "requirements": ["denonavr==0.11.6"],
+  "requirements": ["denonavr==1.0.1"],
   "version": "1.0.0",
   "ssdp": [
     {
