--- a/custom_components/custom_denonavr_hdr/services.yaml
+++ b/custom_components/custom_denonavr_hdr/services.yaml
@@ -1,10 +1,9 @@
----
 # Describes the format for available denonavr services
 
 get_command:
   target:
     entity:
-      integration: denonavr
+      integration: denonavr_hdr
       domain: media_player
   fields:
     command:
@@ -15,7 +14,7 @@ get_command:
 set_dynamic_eq:
   target:
     entity:
-      integration: denonavr
+      integration: denonavr_hdr
       domain: media_player
   fields:
     dynamic_eq:
@@ -25,5 +24,5 @@ set_dynamic_eq:
 update_audyssey:
   target:
     entity:
-      integration: denonavr
+      integration: denonavr_hdr
       domain: media_player
