--- a/configuration.yaml
+++ b/configuration.yaml
@@ -128,6 +128,7 @@ automation: !include_dir_merge_list automation
 group: !include groups.yaml
 input_boolean: !include input_boolean.yaml
 input_button: !include input_button.yaml
+input_select: !include input_select.yaml
 script: !include_dir_merge_named script
 sensor: !include_dir_merge_list sensor
 switch: !include_dir_merge_list switch
