--- a/configuration.yaml
+++ b/configuration.yaml
@@ -115,14 +115,16 @@ hyperion_priority:
   host: !secret hyperion_ip_address
   port: !secret hyperion_port
 
-gemini_api:
-  api_key: !secret gemini_api_key
-
 rest_command:
   garage_camera_output:
     url: !secret camera_garage_output_url
     username: !secret camera_garage_username
     password: !secret camera_garage_password
+  frigate_set_reviewed:
+    url: !secret frigate_reviewed_url
+    method: POST
+    content_type: "application/json; charset=utf-8"
+    payload: '{"ids":["{{ id }}"]}'
 
 automation: !include_dir_merge_list automation
 group: !include groups.yaml
