frigate improvements and remove white noise

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -83,6 +83,9 @@ google_assistant:
     climate.main_floor:
       expose: true
       name: Thermostat
+    switch.nintendo:
+      expose: true
+      name: Nintendo
 
 tts:
   - platform: google_translate
